--- a/jbake.properties
+++ b/jbake.properties
@@ -1,8 +1,7 @@
-#site.host=http://jbake.org
-site.host=http://localhost:8820
+site.host=http://congocc.org
 render.tags=true
 render.sitemap=true
 render.archive=true
-db.store=plocal
+# db.store=plocal
 # default path to build/dist folder
 # destination.folder=output
